# brain_games

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
brain_games/: cli.py  logic.py
brain_games/games/: brain_calc.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
games/: brain_even.py
